# milter-framework

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build_feature_branch.yml  release.yml
src/milter_framework/: __init__.py  cli.py  configuration.py  milter_framework.py  plugins.py  settings.ini
