[build-system]

requires = [
    "setuptools",
    "wheel",
]

build-backend = "setuptools.build_meta"


[project]

name = "milter_framework"
description = "Postfix Milter daemon with pluggable modules."

keywords = [
    "postfix",
    "milter"
]

authors = [
    {name = "Pavel Kim", email = "hello@pavelkim.com"},
]

license = {text = "GNU GPLv3"}
readme = "README.md"

requires-python = ">=3.6"

classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "pyp8s==3.2.2",
    # "milter==0.8.18",
    # "postfix-milter-marker",
    # 'importlib-metadata; python_version<"3.8"',
]

dynamic = ["version"]


[project.urls]

Home = "https://github.com/**"
Repository = "https://github.com/**/**"


[tool.setuptools.dynamic]

version = {attr = "milter_framework.version"}
readme = {file = ["README.md"]}


[tool.setuptools]

include-package-data = true


[tool.setuptools.package-data]

milter_framework = [
    "settings.ini",
]


[project.optional-dependencies]

# pdf = ["ReportLab>=1.2", "RXP"]
# rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]


[project.scripts]

mf = "milter_framework.cli:main"


[tool.distutils.bdist_wheel]

universal = true


# [project.entry-points.'milter_framework.plugins']

# in = 'pmm_output_file'

